# Verba

./: .gitignore  LICENSE  README.md  Verba.cabal
dict/: it-1.dict  it-10.dict  it-11.dict  it-17.dict  it-21.dict  it-23.dict  it-3.dict  it-9.dict
dict/en/: .en-4.dict.swo  en-2.dict  en-4.dict
dict/it/: it-12.dict  it-13.dict  it-14.dict  it-15.dict  it-16.dict  it-18.dict  it-19.dict  it-2.dict  it-20.dict  it-22.dict  it-24.dict  it-25.dict  it-26.dict  it-28.dict  it-4.dict  it-5.dict  it-6.dict  it-7.dict  it-8.dict
src/: Main.hs  Paths_Verba.hs
src/Verba/: CLI.hs  Dictionary.hs  Formatting.hs  Input.hs  Puzzle.hs  Solver.hs  Utils.hs
