name:                Verba
version:             0.1.0.0
synopsis:            A solver for the WordBrain game
description:         A solver for the WordBrain game
license:             MIT
license-file:        LICENSE
author:              Jefffrey
maintainer:          tpigarelli@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Verba
    main-is:            Main.hs
    build-depends:      base >= 4.8 && < 4.9,
                        matrix >= 0.3 && < 0.4
    hs-source-dirs:     src
    default-language:   Haskell2010
